--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,12 @@
   "name": "dogbike",
   "compatibility_date": "2026-01-18",
   "assets": {
-    "directory": "./"
+    "directory": "./",
+    "exclude": [
+      ".git/**",
+      ".wrangler/**",
+      "node_modules/**",
+      "*.log"
+    ]
   }
 }
